--- a/plantilla/css/style.css
+++ b/plantilla/css/style.css
@@ -41,3 +41,50 @@ h5 {
   width: 80px;
 }
 
+/* Stilos footer */
+.footer-style {
+    background-color: #78909c;
+    padding: 20px;
+    padding-left: 80px;
+    padding-right: 80px;
+    -webkit-box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.34);
+    -moz-box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.34);
+    box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.34);
+    font-size: 13px;
+}
+
+@media (max-width: 715px) {
+    .footer-style {
+        padding: 20px;   
+    }
+}
+
+.link-style {
+    text-decoration: none;
+    color: #fff;
+}
+
+.separator-line {
+    margin: 10px;
+    width: 100%;
+    padding: 0.3px;
+    background-color: #fff;
+}
+
+.container-icons {
+    margin: 5px;
+    display: inline-block;
+}
+
+.iconLink-style {
+    border-radius: 50%;
+    text-decoration: none;
+    margin: 5px;
+}
+
+.icon-style {
+    color: #fff;
+}
+
+
+
