mejora de estilos, y funcionalidad en nav y banner respecto al inicio de session

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -27,7 +27,7 @@ header,
 }
 }
 .top-nav-collapse {
-  background-color: #7b1fa2 !important;
+  background-color: #161c27 !important; /*#7b1fa2*/
 }
 
 .navbar:not(.top-nav-collapse) {
@@ -36,7 +36,7 @@ header,
 
 @media (max-width: 991px) {
   .navbar:not(.top-nav-collapse) {
-    background: #7b1fa2 !important;
+    background: #161c27 !important;
   }
 }
 
